--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-register": "^6.18.0",
     "bootstrap": "4.0.0-alpha.5",
+    "compression": "^1.6.2",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "gulp-fingerprint": "^0.3.2",
+    "gulp-rev": "^7.1.2",
     "gulp-sass": "^2.3.2",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^1.9.1",
-    "gulp-uglify": "^2.0.0"
+    "gulp-uglify": "^2.0.0",
+    "hbs": "^4.0.1",
+    "lodash": "^4.17.2",
+    "rev-del": "^1.0.5",
+    "run-sequence": "^1.2.2"
   }
 }
