--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-fingerprint": "^0.3.2",
+    "gulp-nodemon": "^2.2.1",
     "gulp-rev": "^7.1.2",
     "gulp-sass": "^2.3.2",
     "gulp-size": "^2.1.0",
